Bug 321991 - reply to encrypted mail does not set 'encrypt' by default
Summary: reply to encrypted mail does not set 'encrypt' by default
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: crypto (other bugs)
Version First Reported In: 4.10.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-05 13:08 UTC by Axel Braun
Modified: 2013-11-20 11:52 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Braun 2013-07-05 13:08:39 UTC
...seems like a follow-up to https://bugs.kde.org/show_bug.cgi?id=298911 :
When answering to an encrypted mail , the new mail is not encrypted by default. Means that the user has to select 'encrypt' manually, which leaves a high risk to forget it.

Reproducible: Always

Steps to Reproduce:
1. see above
2.
3.
Actual Results:  
When encrypted mail is answered, the 'encrypt mail' option is not set by default

Expected Results:  
The 'encrypt mail' flag should be set by default
Comment 1 Laurent Montel 2013-07-19 11:07:52 UTC
It will better yes.
Will look at how to fix it
Comment 2 Axel Braun 2013-08-29 07:17:19 UTC
...in between it sets at least the 'sign' flag (4.11.0), but not the 'encrypt' flag
Comment 3 Florian E.J. Fruth 2013-11-03 22:08:03 UTC
same problem here with kubuntu 12.04.3 + kmail 4.8.5
Comment 4 Sandro Knauß 2013-11-09 21:58:30 UTC
Still in 4.11.3
Comment 5 Sandro Knauß 2013-11-20 11:52:42 UTC
Git commit 95167ebc5d25c539ca76507a4e3b54e1abc0186f by Sandro Knauß.
Committed on 20/11/2013 at 02:27.
Pushed by knauss into branch 'KDE/4.11'.

Fixes 321991: reply to encrypted mail does not set 'encrypt' by default
FIXED-IN: 4.11.4
REVIEW: 113960

M  +4    -2    kmail/editor/kmcomposewin.cpp

http://commits.kde.org/kdepim/95167ebc5d25c539ca76507a4e3b54e1abc0186f