Fixes 321991: reply to encrypted mail does not set 'encrypt' by default

BUG: 321991
FIXED-IN: 4.11.4
REVIEW: 113960